<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="16dp">

        <TextView
            android:id="@+id/mensagemLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bemvindo"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="123dp"
            android:text="@string/usuario"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/userLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="emailAddress"
            android:background="@color/green_yellow_crayola"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:paddingTop="17dp"
            android:text="@string/senha"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/passwordLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:background="@color/green_yellow_crayola"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <Button
            android:id="@+id/enter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@color/fire_opal"
            android:text="@string/entrar"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/cadastro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:paddingTop="17dp"
            android:text="@string/meuregistro"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/registrarUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@color/fire_opal"
            android:text="@string/cadastrar"
            android:textColor="@color/ghost_white" />

    </LinearLayout>



</android.support.constraint.ConstraintLayout>